--- a/layout_test/index.html
+++ b/layout_test/index.html
@@ -2,17 +2,16 @@
 <html lang="en">
 <head>
 <title>Responsive</title>
-<meta charset="utf-8">
 <meta name="viewport" content="width=device-width, maximum-scale=1, minimum-scale=1">
 <link rel="stylesheet" type="text/css" href="css/default.css" media="all">
 <link rel="stylesheet" type="text/css" href="css/flexslider.css">
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=PT+Sans">
-<script src="js/jquery-1.7.2.min.js"></script>
-<script src="js/jquery.flexslider.js"></script>
-<script src="js/default.js"></script>
+<script defer src="js/jquery-1.7.2.min.js"></script>
+<script defer src="js/jquery.flexslider.js"></script>
+<script defer src="js/default.js"></script>
 <!--[if lt IE 9]>
-<script src="js/html5.js"></script>
-<script src="js/respond.min.js"></script>
+<script defer src="js/html5.js"></script>
+<script defer src="js/respond.min.js"></script>
 <![endif]-->
 </head>
 <body>
@@ -203,7 +202,7 @@
     </section>
   </div>
   <footer id="footer">
-    <div class="center">&copy; Copyright 2012 <a href="#">Company Name</a>. All Rights Reserved <span class="copy">Website Template By <a target="_blank" href="http://webcodebuilder.com">WebCodeBuilder</a></span></div>
+    <div class="center">&copy; Copyright 2015 <a href="/">Icon-Craft</a>. All Rights Reserved <span class="copy">Website Template By <a target="_blank" href="http://webcodebuilder.com">WebCodeBuilder</a></span></div>
   </footer>
 </div>
 </body>
