--- a/layout_test/index.html
+++ b/layout_test/index.html
@@ -3,9 +3,17 @@
 <head>
 <title>Responsive</title>
 <meta name="viewport" content="width=device-width, maximum-scale=1, minimum-scale=1">
-<link rel="stylesheet" type="text/css" href="css/default.css" media="all">
-<link rel="stylesheet" type="text/css" href="css/flexslider.css">
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=PT+Sans">
+<noscript>
+  <link rel="stylesheet" type="text/css" href="css/default.css" media="all">
+  <link rel="stylesheet" type="text/css" href="css/flexslider.css">
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=PT+Sans">
+<noscript>
+<script defer src="/includes/js/loadCSS.js"></script>
+<script defer type="text/javascript">
+loadCSS("css/default.css", window.document.getElementsByTagName("script")[0], "all");
+loadCSS("css/flexslider.css");
+loadCSS("http://fonts.googleapis.com/css?family=PT+Sans");
+</script>
 <script defer src="js/jquery-1.7.2.min.js"></script>
 <script defer src="js/jquery.flexslider.js"></script>
 <script defer src="js/default.js"></script>
