Fixed small error

--- a/layout_test/index.html
+++ b/layout_test/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="css/default.css" media="all">
   <link rel="stylesheet" type="text/css" href="css/flexslider.css">
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=PT+Sans">
-<noscript>
+</noscript>
 <script defer src="/includes/js/loadCSS.js"></script>
 <script defer type="text/javascript">
 loadCSS("css/default.css", window.document.getElementsByTagName("script")[0], "all");
