Added some basic text

--- a/layout_test/index.html
+++ b/layout_test/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Responsive</title>
+<title>Icon-Craft.net - Your Blocks, your Style</title>
 <meta name="viewport" content="width=device-width, maximum-scale=1, minimum-scale=1">
 <link rel="stylesheet" type="text/css" href="css/default.css" media="all">
 <noscript>
@@ -27,7 +27,7 @@ loadCSS("http://fonts.googleapis.com/css?family=PT+Sans");
     <div class="center">
       <nav id="mainNav">
         <ul>
-          <li class="active"><a href="#pagewidth"><span>gallery</span></a></li>
+          <li class="active"><a href="#pagewidth"><span>Home</span></a></li>
           <li><a href="#twoColumnLayout"><span>2 columns</span></a></li>
           <li><a href="#threeColumnLayout"><span>3 columns</span></a></li>
           <li><a href="#boxes"><span>boxes</span></a></li>
@@ -40,8 +40,8 @@ loadCSS("http://fonts.googleapis.com/css?family=PT+Sans");
   <div id="content">
     <section class="row">
       <div class="center">
-        <h1>Responsive HTML5/CSS3 template</h1>
-        <strong class="subHeading">works well on Desktops, Tablets, and Mobile Phones</strong>
+        <h1>Icon-Craft.net</h1>
+        <strong class="subHeading">Your Blocks, your Style</strong>
         <div class="gallery">
           <ul class="slides">
             <li><img src="img/img-gallery.jpg" alt=""></li>
@@ -49,7 +49,7 @@ loadCSS("http://fonts.googleapis.com/css?family=PT+Sans");
             <li><img src="img/img-gallery3.jpg" alt=""></li>
           </ul>
         </div>
-        <div class="buttons"> <a href="#" class="btn btnGreen"><span>Download Template</span></a> <span><em>or</em></span> <a href="#" class="btn btnBlue"><span>Visit Developers Site</span></a> </div>
+        <div class="buttons"> <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=yannick%40tedworld%2ede&lc=US&item_name=Icon%2dCraft%2enet&no_note=0&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_LG%2egif%3aNonHostedGuest" class="btn btnGreen"><span>Donate</span></a> <span><em>or</em></span> <a href="#" class="btn btnBlue"><span>Launch the Builder</span></a> </div>
       </div>
     </section>
     <section id="twoColumnLayout" class="row grey">
