Hid the donation link

--- a/layout_test/index.html
+++ b/layout_test/index.html
@@ -49,7 +49,7 @@ loadCSS("http://fonts.googleapis.com/css?family=PT+Sans");
             <li><img src="img/img-gallery3.jpg" alt=""></li>
           </ul>
         </div>
-        <div class="buttons"> <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=yannick%40tedworld%2ede&lc=US&item_name=Icon%2dCraft%2enet&no_note=0&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_LG%2egif%3aNonHostedGuest" class="btn btnGreen" rel="nofollow" target="_blank"><span>Donate via PayPal</span></a> <span><em>or</em></span> <a href="#" class="btn btnBlue"><span>Launch the Builder</span></a> </div>
+        <div class="buttons"> <a href="/donate.php" class="btn btnGreen" rel="nofollow" target="_blank"><span>Donate via PayPal</span></a> <span><em>or</em></span> <a href="#" class="btn btnBlue"><span>Launch the Builder</span></a> </div>
       </div>
     </section>
     <section id="twoColumnLayout" class="row grey">
