--- a/layout_test/index.html
+++ b/layout_test/index.html
@@ -16,6 +16,7 @@ loadCSS("http://fonts.googleapis.com/css?family=PT+Sans");
 <script defer src="js/jquery-1.7.2.min.js"></script>
 <script defer src="js/jquery.flexslider.js"></script>
 <script defer src="js/default.js"></script>
+<script defer src="/includes/js/script.js"></script>
 <!--[if lt IE 9]>
 <script defer src="js/html5.js"></script>
 <script defer src="js/respond.min.js"></script>
