--- a/layout_test/index.html
+++ b/layout_test/index.html
@@ -6,12 +6,12 @@
 <link rel="stylesheet" type="text/css" href="css/default.css" media="all">
 <noscript>
   <link rel="stylesheet" type="text/css" href="css/flexslider.css">
-  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=PT+Sans">
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=PT+Sans">
 </noscript>
 <script defer src="/includes/js/loadCSS.js"></script>
 <script defer type="text/javascript">
 loadCSS("css/flexslider.css");
-loadCSS("http://fonts.googleapis.com/css?family=PT+Sans");
+loadCSS("//fonts.googleapis.com/css?family=PT+Sans");
 </script>
 <script defer src="js/jquery-1.7.2.min.js"></script>
 <script defer src="js/jquery.flexslider.js"></script>
