--- a/layout_test/index.html
+++ b/layout_test/index.html
@@ -6,15 +6,11 @@
 <link rel="stylesheet" type="text/css" href="css/default.css" media="all">
 <!-- Small fix for until the slider has initialized -->
 <style type="text/css">div.gallery>ul.slides>li{display:none}div.gallery>ul.slides>li:first-of-type{display:inherit}</style>
-<noscript>
+<noscript id="loadCSS">
   <link rel="stylesheet" type="text/css" href="css/flexslider.css">
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=PT+Sans">
 </noscript>
 <script defer src="/includes/js/loadCSS.js"></script>
-<script defer type="text/javascript">
-loadCSS("css/flexslider.css");
-loadCSS("//fonts.googleapis.com/css?family=PT+Sans");
-</script>
 <script defer src="js/jquery-1.7.2.min.js"></script>
 <script defer src="js/jquery.flexslider.js"></script>
 <script defer src="js/default.js"></script>
